--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,6 @@
                         <configuration>
                             <testFailureIgnore>false</testFailureIgnore>
 
-
                             <argLine>
                                 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.8.RC1/aspectjweaver-1.9.8.RC1.jar"
                             </argLine>
@@ -144,18 +143,18 @@
                         </dependencies>
                 </plugin>
 
-                <plugin>
-                    <groupId>io.qameta.allure</groupId>
-                    <artifactId>allure-maven</artifactId>
-                    <version>2.10.0</version>
-                    <configuration>
-                        <reportVersion>2.10.0</reportVersion>
-                        <installDirectory>${project.build.directory}</installDirectory>
-                        <allureDownloadUrl>
-                            https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.10.0/allure-commandline-2.10.0.zip
-                        </allureDownloadUrl>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>io.qameta.allure</groupId>-->
+<!--                    <artifactId>allure-maven</artifactId>-->
+<!--                    <version>2.10.0</version>-->
+<!--                    <configuration>-->
+<!--                        <reportVersion>2.10.0</reportVersion>-->
+<!--                        <installDirectory>${project.build.directory}</installDirectory>-->
+<!--                        <allureDownloadUrl>-->
+<!--                            https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.10.0/allure-commandline-2.10.0.zip-->
+<!--                        </allureDownloadUrl>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
@@ -178,23 +177,24 @@
                 </executions>
             </plugin>
 
-                <plugin>
-                    <groupId>io.qameta.allure</groupId>
-                    <artifactId>allure-maven</artifactId>
-                    <version>2.10.0</version>
-                    <configuration>
-                        <reportVersion>2.10.0</reportVersion>
-                        <installDirectory>${project.build.directory}</installDirectory>
-                        <allureDownloadUrl>
-                            https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.10.0/allure-commandline-2.10.0.zip
-                        </allureDownloadUrl>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>io.qameta.allure</groupId>-->
+<!--                    <artifactId>allure-maven</artifactId>-->
+<!--                    <version>2.10.0</version>-->
+<!--                    <configuration>-->
+<!--                        <reportVersion>2.10.0</reportVersion>-->
+<!--                        <installDirectory>${project.build.directory}</installDirectory>-->
+<!--                        <allureDownloadUrl>-->
+<!--                            https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.10.0/allure-commandline-2.10.0.zip-->
+<!--                        </allureDownloadUrl>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
 
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                 </plugin>
+
                 <plugin>
                     <groupId>io.qameta.allure</groupId>
                     <artifactId>allure-maven</artifactId>
@@ -208,25 +208,25 @@
                     </configuration>
                 </plugin>
 
-                <plugin>
-                    <groupId>net.masterthought</groupId>
-                    <artifactId>maven-cucumber-reporting</artifactId>
-                    <version>2.8.0</version>
-                    <executions>
-                        <execution>
-                            <id>execution</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>generate</goal>
-                            </goals>
-                            <configuration>
-                                <projectName>YOUR_PROJECT_Name</projectName>
-                                <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
-                                <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>net.masterthought</groupId>-->
+<!--                    <artifactId>maven-cucumber-reporting</artifactId>-->
+<!--                    <version>2.8.0</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>execution</id>-->
+<!--                            <phase>verify</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>generate</goal>-->
+<!--                            </goals>-->
+<!--                            <configuration>-->
+<!--                                <projectName>YOUR_PROJECT_Name</projectName>-->
+<!--                                <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>-->
+<!--                                <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
         </plugins>
     </build>
 </project>
