--- a/pom.xml
+++ b/pom.xml
@@ -144,11 +144,11 @@
                         <version>2.22.2</version>
                         <configuration>
                             <testFailureIgnore>false</testFailureIgnore>
-
                             <argLine>
                                 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.9.1/aspectjweaver-1.9.9.1.jar"
                             </argLine>
                             <systemProperties>
+                                <testFailureIgnore>false</testFailureIgnore>
                                 <property>
                                     <name>junit.jupiter.extensions.autodetection.enabled</name>
                                     <value>true</value>
